--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-navigation-menu": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.1",
+    "@supabase/auth-helpers-nextjs": "^0.6.1",
     "@supabase/supabase-js": "^2.21.0",
     "@t3-oss/env-core": "^0.2.2",
     "@t3-oss/env-nextjs": "^0.2.2",
