--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "update-types": "npx supabase gen types typescript --project-id \"ovysrtbdvxusooolwpny\" > lib/database.ts"
   },
   "dependencies": {
     "@radix-ui/react-navigation-menu": "^1.1.2",
@@ -33,5 +34,8 @@
     "tailwindcss-animate": "^1.0.5",
     "typescript": "5.0.4",
     "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "supabase": "^1.52.2"
   }
 }
