--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "update-types": "npx supabase gen types typescript --project-id \"ovysrtbdvxusooolwpny\" > lib/database.ts"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.0.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-navigation-menu": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.1",
     "@supabase/auth-helpers-nextjs": "^0.6.1",
